--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <a href="#" class="nav-link dropdown-toggle" id="navbarDropmenu" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">Grievance</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a href="griv_status.html" class="dropdown-item">view Status of Grievance</a></li>
+                <li><a href="griv_status.html" class="dropdown-item">View Status of Grievance</a></li>
                 <li><a href="#" class="dropdown-item">Lodge your Grievance</a></li>
                <!-- <li><a href="#" class="dropdown-item">Feature #3</a></li>-->
               </ul>
