--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 aria-expanded="false">Grievance</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a href="griv_status.html" class="dropdown-item">View Status of Grievance</a></li>
-                <li><a href="file_griv.html" class="dropdown-item">Lodge your Grievance</a></li>
+                <li><a href="#" class="dropdown-item">Lodge your Grievance</a></li>
                <!-- <li><a href="#" class="dropdown-item">Feature #3</a></li>-->
               </ul>
             </li>
@@ -197,7 +197,7 @@
         <div class="card" id="box5">
           <!-- <i class="fa-regular fa-bell"></i> -->
           <img class="icons" src="report.png" alt="">
-          <h3><a href="file_griv.html">lodge your Grievance</a></h3>
+          <h3><a href="#">lodge your Grievance</a></h3>
           <!-- <div class="pra">
               <p>All threat calls will be made with numbers and location being anonymous so that authorities could not trace the caller. Your identity shall not be revealed in any case.</p>
               <p>
