correct header alignment

--- a/index.html
+++ b/index.html
@@ -22,14 +22,28 @@
     <h1 id="logo">Dept. Of Forest & Wildlife</h1>
   </div>
 -->
-<div class="header">
+<!-- <div class="header">
   <img class="headimg1" style="display: inline;" src="logofinal.png" alt="logo" />
   <h1 class="headtxt" style="display: inline;"> Department Of Forest and Wildlife</h1>
   <img class="headimg2" style="display: inline;" src="logodfw.png"alt="logoDFW"/>
-</div>
+</div> -->
 
+<div id="header">
+
+  <img id="logo2" src="logodfw.png" alt="flamestop logo">
+  <img id="logo" src="logofinal.png" alt="company logo" >
+  
+  <div id="company-address">
+  <p>
+  <span class="companyname"> Dept. Of Forest & Wildlife</span><br>
+  A-Block, 2nd Floor, Vikas Bhawan, I.P. Estate, New Delhi-110002<br>
+  </p>
+  </div>
+  
+  </div> 
+  
 <div class="topbar">
-  <h1> E-Forest (Grievance)</h1>
+ <span class="topbarspan"><h2> E-Forest (Grievance)</h2></span> 
 </div>
 
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark " style="background-color:#719C27 ;">
